# astro-ai

./: .gitignore  Makefile  README.md  astro.code-workspace  pyproject.toml  pyrightconfig.json
.claude/agents/: context-architect.md
.claude/skills/docstring-generation/: docstring-generation.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
bot/: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
bot/.claude/: CLAUDE.md  settings.local.json
bot/.claude/agent-memory/backend-architect/: MEMORY.md  debugging.md
bot/.claude/agents/: backend-architect.md  code-reviewer.md  docs-writer.md  test-writer.md
bot/docs/: ingestion-pipeline.md
bot/src/: main.py
bot/src/core/: clients.py  config.py  database.py
bot/src/generation/: response_generator.py
bot/src/ingestion/: embeddings.py  message_buffer.py  queries.py
bot/src/models/: chat_message.py  stream_event.py  twitch_badge.py  twitch_message.py  twitch_user.py
bot/src/providers/: twitch_listener.py
bot/src/utils/: decorators.py
bot/tests/providers/: test_twitch_listener.py
docs/: stack.md
infra/: docker-compose.yaml
infra/init/: astro-db.sql  astro-extensions.sql
