[tool.poetry]
name = "astro-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
twitchio = "^3.2.1"
uuid6 = "^2025.0.1"
openai = "^2.21.0"
supabase = "^2.28.0"
psycopg = {extras = ["binary"], version = "^3.3.3"}
pgvector = "^0.4.2"
langchain = "^1.2.10"
redis = "^7.2.0"
python-dotenv = "^1.2.1"
tiktoken = "^0.12.0"
fastapi = "^0.129.2"
uvicorn = "^0.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
