[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
twitchio = "3.2.1"
python-dotenv = "1.0.1"
openai = "2.21.0"
supabase = "2.28.0"
pgvector = "0.4.2"
langchain = "1.2.10"
tiktoken = "0.12.0"
fastapi = "0.129.1"
uvicorn = "0.41.0"
redis = "7.1.1"
uuid6 = "2025.0.1"
psycopg = {version = "^3.3.3", extras = ["binary", "pool"]}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
ruff = "^0.9"
mypy = "^1.15"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
